--- a/templates/core/search.html
+++ b/templates/core/search.html
@@ -118,7 +118,7 @@
               {% for category in categories_res %}
               <ul class="categories">
               <li>
-                <a href="{% url 'category' category.name %}"
+                <a href="{% url 'category' category.slug %}"
                   >{{category.name}} <span></span
                 ></a>
               </li>
