--- a/templates/error/404.html
+++ b/templates/error/404.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 {% load static %}
-{% block title %}Contact{% endblock title %}
+{% block title %}{{title}}{% endblock title %}
 
     {% block content %}
     <section class="site-section">
