--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -63,6 +63,118 @@
     left: 10px;
     font-size: 20px;
   }
+  .css-7kdauc {
+    text-size-adjust: 100%;
+    tab-size: 4;
+    font-family: inherit;
+    line-height: 1.5;
+    box-sizing: border-box;
+    border-style: solid;
+    border-color: rgb(229, 231, 235);
+    --tw-ring-inset: var(--tw-empty);
+    --tw-ring-offset-width: 0px;
+    --tw-ring-offset-color: #fff;
+    --tw-ring-color: rgba(59, 130, 246, 0.5);
+    --tw-ring-offset-shadow: 0 0 #0000;
+    --tw-ring-shadow: 0 0 #0000;
+    --tw-shadow: 0 0 #0000;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-align: center;
+    align-items: center;
+    padding: 1.25rem;
+    margin-bottom: 1.25rem;
+    --tw-text-opacity: 1;
+    color: rgba(255, 255, 255, var(--tw-text-opacity));
+    --tw-bg-opacity: 1;
+    background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+    border-width: 1px;
+    border-radius: 0.5rem;
+  }
+
+  .css-12jyqtu {
+        text-size-adjust: 100%;
+    tab-size: 4;
+    font-family: inherit;
+    line-height: 1.5;
+    --tw-text-opacity: 1;
+    color: rgba(255, 255, 255, var(--tw-text-opacity));
+    --tw-bg-opacity: 1;
+    box-sizing: border-box;
+    border-width: 0px;
+    border-style: solid;
+    border-color: rgb(229, 231, 235);
+    --tw-ring-inset: var(--tw-empty, );
+    --tw-ring-offset-width: 0px;
+    --tw-ring-offset-color: #fff;
+    --tw-ring-color: rgba(59, 130, 246, 0.5);
+    --tw-ring-offset-shadow: 0 0 #0000;
+    --tw-ring-shadow: 0 0 #0000;
+    --tw-shadow: 0 0 #0000;
+    display: block;
+    vertical-align: middle;
+    flex: 1 1 0%;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+    margin-right: 1.25rem;
+  }
+
+  .css-1fftg42 {
+        text-size-adjust: 100%;
+    tab-size: 4;
+    font-family: inherit;
+    line-height: 1.5;
+    --tw-text-opacity: 1;
+    color: rgba(255, 255, 255, var(--tw-text-opacity));
+    --tw-bg-opacity: 1;
+    box-sizing: border-box;
+    border-width: 0px;
+    border-style: solid;
+    border-color: rgb(229, 231, 235);
+    --tw-ring-inset: var(--tw-empty, );
+    --tw-ring-offset-width: 0px;
+    --tw-ring-offset-color: #fff;
+    --tw-ring-color: rgba(59, 130, 246, 0.5);
+    --tw-ring-offset-shadow: 0 0 #0000;
+    --tw-ring-shadow: 0 0 #0000;
+    --tw-shadow: 0 0 #0000;
+    display: flex;
+    flex-direction: row;
+    -webkit-box-align: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .css-ddoyzk {
+        text-size-adjust: 100%;
+    tab-size: 4;
+    font-family: inherit;
+    line-height: 1.5;
+    --tw-text-opacity: 1;
+    color: rgba(255, 255, 255, var(--tw-text-opacity));
+    --tw-bg-opacity: 1;
+    box-sizing: border-box;
+    border-width: 0px;
+    border-style: solid;
+    border-color: rgb(229, 231, 235);
+    --tw-ring-inset: var(--tw-empty, );
+    --tw-ring-offset-width: 0px;
+    --tw-ring-offset-color: #fff;
+    --tw-ring-color: rgba(59, 130, 246, 0.5);
+    --tw-ring-offset-shadow: 0 0 #0000;
+    --tw-ring-shadow: 0 0 #0000;
+    --tw-shadow: 0 0 #0000;
+    display: flex;
+    flex-direction: row;
+    -webkit-box-align: center;
+    align-items: center;
+    margin-bottom: 0.75rem;
+    font-weight: 600;
+    letter-spacing: -0.025em;
+    text-transform: uppercase;
+  }
+  
+
 </style>
 {% endblock js_up %}
 {% block content %} 
@@ -113,22 +225,14 @@
         {% endif %}
         <img src="{{post.thumbnail.url}}" alt="Image" class="img-fluid mb-5" />
         
-        {% if post.audio_url %}
-        <div class="row mt-2 mb-2">
-          <div class="col-md-6 mb-1">
-            <h4>Listen to the post</h4>
-          </div>
-          <div class="col-md-6">
-            <audio controls>
-              <source src="{{post.audio_url}}" type="audio/wav">
-            </audio>
-          </div>
-        </div>
-        {% endif %}
         <div id="toc" class="mbtTOC">
           <button onclick="mbtToggle()">Table of Contents</button>
           <ol id="mbtTOC"></ol>
         </div>
+        {% if post.audio_url %}
+        <div class="css-7kdauc"><div class="css-ddoyzk mb-2"><i class="fa fa-headphones" aria-hidden="true"></i><span style="text-transform: uppercase;">&nbsp;Listen to this article</span></div><div class="css-1fftg42"><audio controls="" controlslist="nodownload" class="css-12jyqtu" __idm_id__="8193"><source src="{{post.audio_url}}" type="audio/wav">Your browser does not support the audio element.</audio></div></div>
+        {% endif %}
+
         <div class="post-content-body" id="post-toc">{{post.content|safe}}</div>
 
         <div class="pt-3">
