--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -359,7 +359,7 @@
           <!-- END comment-list -->
           <script type="text/javascript">
             function ReplyForm(id) {
-              let elm = `<form method="POST" class="p-5 bg-light">
+              let elm = `<form method="POST" class="p-3 bg-light">
                                     {% csrf_token %}
                         <div class="form-group">
                         <input type='text' value='${id}' name = 'comm_id' style="display:none;" readonly/>
@@ -376,9 +376,9 @@
           </script>
 
           {% if request.session.user_id %}
-          <div class="comment-form-wrap pt-5">
+          <div class="comment-form-wrap">
             <h3 class="mb-5">Leave a comment</h3>
-            <form method="POST" class="p-5 bg-light">
+            <form method="POST" class="p-3 bg-light">
               {% csrf_token %}
               <div class="form-group">
                 <label for="message">Comment</label>
