--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -5,6 +5,28 @@
 
   {% if 'posts' in request.path %} {% include "partials/author.html" %} {% endif %}
 
+  {% if series %}
+  <div class="sidebar-box">
+    <h3 class="heading">More From This Series</h3>
+    <div class="post-entry-sidebar">
+      <div class="list-group" style="height: 300px; overflow-y: scroll">
+        {% for ser_post in series.posts.all %}
+
+        {% if post.id == ser_post.id %}
+        <a href="{{ser_post.get_absolute_url}}" class="list-group-item list-group-item-action active disabled" aria-disabled="true" aria-current="true">
+          {{ser_post.title}}
+        </a>
+        {% else %}
+        <a href="{{ser_post.get_absolute_url}}" class="list-group-item list-group-item-action">{{ser_post.title}}</a>
+        {% endif %}
+
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  {% endif %}
+
+  <!-- Popular Posts  -->
   <div class="sidebar-box">
     <h3 class="heading">Popular Posts</h3>
     <div class="post-entry-sidebar">
@@ -34,7 +56,6 @@
       </ul>
     </div>
   </div>
-  <!-- END sidebar-box -->
 
   <!-- Recently Viewed Posts -->
   <div class="sidebar-box">
@@ -67,6 +88,7 @@
     </div>
   </div>
 
+  <!-- All Series -->
   <div class="sidebar-box" id="">
     <h3 class="heading">
       Series<a href="{% url 'new_series' %}" style="color: black"
@@ -86,6 +108,7 @@
     </ul>
   </div>
 
+  <!-- All Categories -->
   <div class="sidebar-box" id="cat_box">
     <h3 class="heading">
       Categories
@@ -102,8 +125,8 @@
       {% endfor %}
     </ul>
   </div>
-  <!-- END sidebar-box -->
 
+  <!-- All Tags -->
   <div class="sidebar-box" id="tag_box">
     <h3 class="heading">
       Tags
@@ -142,6 +165,7 @@
   <!-- End Twitter -->
   {% endif %}
 
+  <!-- Newsletter -->
   <div class="sidebar-box">
     <h3 class="heading">Subscribe to our newsletters</h3>
     <div id="revue-embed">
