Add Email Alerts

--- a/templates/emails/days-alert.html
+++ b/templates/emails/days-alert.html
@@ -433,7 +433,7 @@
   <![endif]-->
   </head>
   <body>
-    <span class="preheader">Thank you for signing up on iRead Blog.</span>
+    <span class="preheader">We miss you on iRead Blog.</span>
     <table class="email-wrapper" width="100%" cellpadding="0" cellspacing="0" role="presentation">
       <tr>
         <td align="center">
@@ -455,8 +455,9 @@
                   <tr>
                     <td class="content-cell">
                       <div class="f-fallback">
-                        <h1>Welcome, {{receiver}}!</h1>
-                        <p>Thanks for signing up on iRead Blog. We’re thrilled to have you on board.</p>
+                        <h1>Hey, {{receiver}}!</h1>
+                        <p>It has been a long time since you logged in on iRead Blog. We miss you badly! 😭</p>
+                        <p>Did you forget us? We haven't. Login to your account <a href="https://ireadblog.com/accounts/login">here</a> and see what's going on there on iRead.</p>
                         <p>To see how iRead Blog works, check out this video tutorial:</p>
                         <!-- Action -->
                         <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
@@ -511,7 +512,7 @@
                       <p class="f-fallback sub align-center">&copy; 2021
                 <script>
                   new Date().getFullYear() > 2021 &&
-                    document.write("-" + new Date().getFullYear());
+                    document.write("- " + new Date().getFullYear());
                 </script> iRead Blog <br>All rights reserved</p>
                     </td>
                   </tr>
