--- a/templates/emails/otp.html
+++ b/templates/emails/otp.html
@@ -8,7 +8,7 @@
     <meta name="supported-color-schemes" content="light dark" />
     <title></title>
     <style type="text/css" rel="stylesheet" media="all">
-    /* Base ------------------------------ */
+    /* BASE ------------------------------ */
     
     @import url("https://fonts.googleapis.com/css?family=Nunito+Sans:400,700&display=swap");
     body {
