Fix Google Recaptcha

--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -3,7 +3,7 @@
 {% block title %}Contact{% endblock title %}
 
     {% block content %}
-     <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <section class="site-section">
       <div class="container">
         <div class="row mb-4">
@@ -39,9 +39,8 @@
                   </div>
                   <div class="row">
                     <div class="col-md-6 form-group">
-                      <!-- <div class="g-recaptcha mb-3" data-sitekey="6LdOrVceAAAAAB20nfeAIhtHLb_YQZla5PmjhYgv"></div> -->
-                      <input type="submit" id="sendMsg" value="Send Message" class="btn btn-primary g-recaptcha" data-sitekey="6LdOrVceAAAAAB20nfeAIhtHLb_YQZla5PmjhYgv" 
-        data-callback='onSubmit'>
+                      <div class="g-recaptcha mb-3" data-sitekey="6Lf7Um0fAAAAAAa3S9dp3x4FHv92kLqdL75Wkheo"></div>
+                      <input type="submit" id="sendMsg" value="Send Message" class="btn btn-primary">
                     </div>
                   </div>
                 </form>
