--- a/templates/emails/days-alert.html
+++ b/templates/emails/days-alert.html
@@ -468,7 +468,7 @@
                               <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                                 <tr>
                                   <td align="center">
-                                    <a href="https://www.youtube.com/watch?v=jLdJnVgpV8U" class="f-fallback button" target="_blank">Watch on YouTube</a>
+                                    <a href="https://www.youtube.com/watch?v=jLdJnVgpV8U" class="f-fallback button" target="_blank" style="color:white;">Watch on YouTube</a>
                                   </td>
                                 </tr>
                               </table>
@@ -486,7 +486,7 @@
                               <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                                 <tr>
                                   <td align="center">
-                                    <a href="{{edit_profile_url}}" class="f-fallback button" target="_blank">Add Twitter Username</a>
+                                    <a href="{{edit_profile_url}}" class="f-fallback button" target="_blank" style="color: white;">Add Twitter Username</a>
                                   </td>
                                 </tr>
                               </table>
