Add Google Adsense

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -105,6 +105,9 @@
       name="google-site-verification"
       content="kCaDsevOB107PNa52WhEleNVU7IrF7zFpT4prbTqrqM"
     />
+    <!-- Adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8354103933180400"
+     crossorigin="anonymous"></script>
     <link
       rel="shortcut icon"
       type="image/png"
