--- a/templates/core/update-post.html
+++ b/templates/core/update-post.html
@@ -1,4 +1,13 @@
-{% extends "core/base.html" %} {% load static %} {% block title %}{{post.title}}{% endblock title %} {% block content %}
+{% extends "core/base.html" %} {% load static %} {% block title %}{{post.title}}{% endblock title %} 
+{% block js_up %}
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+  crossorigin="anonymous"
+/>
+{% endblock js_up %}
+{% block content %}
 
 <section class="site-section py-lg">
       <div class="container">
